# qulisp

./: .dockerignore  .gitignore  Cargo.toml
.github/workflows/: build_and_test.yaml
ci/: Dockerfile  build_and_test.sh  utils.sh
src/: ast.rs  builtins.rs  environment.rs  grammar.lalrpop  main.rs  qulisp_code_snippets.rs
src/test_code_snippets/: print_msg.ql  sum_of_squares.ql  too_big_int.ql
